apps/homepage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.4.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homepage-config
